[package]
name = "async-sleep"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Async Sleep"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/timer-rs"
homepage = "https://github.com/bk-rs/timer-rs"
documentation = "https://docs.rs/async-sleep"
keywords = []
categories = []
readme = "README.md"

[dependencies]
