[package]
name = "async-sleep"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Async Sleep"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/timer-rs"
homepage = "https://github.com/bk-rs/timer-rs"
documentation = "https://docs.rs/async-sleep"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio", "impl_async_timer", "impl_async_io"]

impl_tokio = ["tokio"]
impl_async_timer = ["async-timer"]
impl_async_io = ["async-io", "futures-util"]

[dependencies]
futures-util = { version = "0.3", default-features = false, optional = true }

tokio = { version = "1.16", default-features = false, features = ["time"], optional = true }
async-timer = { version = "1.0.0-beta", default-features = false, optional = true }
async-io = { version = "1.6", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["impl_tokio", "impl_async_timer"],
    ["impl_tokio", "impl_async_io"],
    ["impl_async_timer", "impl_async_io"],
]
